--- a/hover시 확대 글씨.html
+++ b/hover시 확대 글씨.html
@@ -50,7 +50,7 @@
                 <img src="./img/nike.png" alt="">
             </div>
             <div class="title">
-                <h3>hover시 이미지 확대 및 글자 효과</h3>
+                <h3>hover시 이미지 확대 및 글자 효과임</h3>
             </div>
         </a>
     </div>
